Bug 358973 - Knotes do not drag, they only drop at the location of the released mouse-button
Summary: Knotes do not drag, they only drop at the location of the released mouse-button
Status: RESOLVED FIXED
Alias: None
Product: knotes
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL: https://www.youtube.com/watch?v=0Zw19...
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-04 09:26 UTC by e8hffff
Modified: 2018-06-09 19:05 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.8.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description e8hffff 2016-02-04 09:26:41 UTC
Knotes do not drag, they only drop at the location of the released mouse-button.  This has been happening for months.

Reproducible: Always

Steps to Reproduce:
1. Create note
2. Drag Note
3. Observe no note being dragged with mouse cursor.
4. When releasing the mouse button used to drag the note then moved to the location

Actual Results:  
No draw-up of dragged note.

Expected Results:  
Note should be displayed as you drag.

Watch on Youtube a demonisation.  Also I have an Intel NUC 5i5RYH running latest Arclinux patched system and all /etc patches from pacnew files.
Comment 1 Fabio Coatti 2016-04-21 18:37:08 UTC
Same problem here:
knotes 16.04.0
gentoo overlay packages 
QT 5.5.1
kde framework 5.21.0
Comment 2 Rafael Linux User 2016-10-26 10:03:16 UTC
*** Bug 371706 has been marked as a duplicate of this bug. ***
Comment 3 Rick Alther 2017-01-03 19:17:19 UTC
This is still a problem (no dragging, the note just moves where you release the mouse button).

I'm on Fedora 24:
KNotes: 16.08.3
KDE Framework: 5.27.0
Qt: 5.6.2
Comment 4 Fabio Coatti 2017-07-16 09:16:32 UTC
Still a problem in 
knotes 17.04.3
kdeframeworks 5.36.0
qt 5.7.1

Gentoo
Comment 5 Rafael Linux User 2017-07-16 10:33:38 UTC
Is like no one were maintaining this program and, sincerely, is one of the keys to choose KDE/Plasma, for productivity.

It's a pity  :(
Comment 6 Christoph Feck 2017-07-18 02:32:47 UTC
Can anyone try to adding

    m_label->setMouseTracking(true);

in line 790 of src/notes/knote.cpp (after m_label creation)?

It is possible that Qt5 no longer send QEvent::MouseMove events to widget's eventFilter(), unless they track mouse.
Comment 7 Fabio Coatti 2017-07-18 07:01:35 UTC
Just tried, it seems that the patch has no effect..

knotes 17.04.3
kdeframeworks 5.36.0
qt 5.7.1
Comment 8 Andrew Bae 2018-01-21 16:10:27 UTC
There is this related Debian bug: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=833834
which mentioned this: 
"As a workaround, you can still use the regular kwin window drag, dragging the 
window while you keep alt pressed."
Comment 9 Rafael Linux User 2018-01-22 01:06:35 UTC
It's a pity that still we need workarounds to solve this bug after a year ... :(
Comment 10 Robert Hoffmann 2018-06-06 10:51:14 UTC
See https://phabricator.kde.org/D13379
Comment 11 Laurent Montel 2018-06-06 11:50:47 UTC
Git commit d7555e0e92b358a47a0c35262a89ade44a1124e1 by Laurent Montel.
Committed on 06/06/2018 at 11:48.
Pushed by mlaurent into branch 'Applications/18.04'.

Apply patch from Robert Hoffmann

Notes did not drag, only when releasing the mouse button,
the note was placed at the new position.

Use QMouseEvent::buttons() to check for buttons pressed
instead of QMouseEvent::button(), which always returns
Qt::NoButton for mouse move events (see documentation).

Differential Revision: https://phabricator.kde.org/D13379
FIXED-IN: 5.8.3

M  +2    -1    src/notes/knote.cpp

https://commits.kde.org/knotes/d7555e0e92b358a47a0c35262a89ade44a1124e1
Comment 12 Fabio Coatti 2018-06-06 18:51:50 UTC
Just tried this patch on 18.04.01; it improves the situation but it is not perfect. 
Basically now what happens is that when you click on a note titlebar, no matter where, the note quickly moves so the upper left corner of the note is located just under the mouse cursor. From this point on the note can be dragged as expected.
Don't know if this can be the same bug or I need to open another one.
Comment 13 Rafael Linux User 2018-06-06 22:36:00 UTC
I agree. I don't know if is the same bug or not, but basically Knotes windows behaviour is not like a normal KDE window.
Comment 14 Robert Hoffmann 2018-06-07 07:42:37 UTC
You're right, I'll look into it.
Comment 15 Robert Hoffmann 2018-06-07 11:43:54 UTC
Fixed jumping, see https://phabricator.kde.org/D13401
Comment 16 Rafael Linux User 2018-06-07 19:06:30 UTC
I wish OpenSUSE 15 add the update soon.

Thank you!
Comment 17 Fabio Coatti 2018-06-09 19:05:05 UTC
(In reply to Robert Hoffmann from comment #15)
> Fixed jumping, see https://phabricator.kde.org/D13401

Tested a backport to 18.04.2,works as expected. Many thanks!!