Apply patch from Robert Hoffmann

Notes did not drag, only when releasing the mouse button,
the note was placed at the new position.

Use QMouseEvent::buttons() to check for buttons pressed
instead of QMouseEvent::button(), which always returns
Qt::NoButton for mouse move events (see documentation).

Differential Revision: https://phabricator.kde.org/D13379

BUG: 358973
FIXED-IN: 5.8.3